--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "twilio": "^3.66.0"
   },
   "devDependencies": {
+    "mongoose-increment": "^2.0.0",
     "nodemon": "^2.0.11"
   }
 }
