--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mongoose": "^5.13.2",
     "mongoose-increment": "^2.0.0",
     "morgan": "^1.10.0",
